# django-test-commit-hook

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  django_commit_tester.py  hooks.yaml  setup.cfg
