[metadata]
name = django_commit_tester
version = 0.0.8
description = Test Djando Unit Tests
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dotmodusgeorge/django-test-commit-hook
author = George
author_email = jorge@yay.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
py_modules = django_commit_tester
python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*

[options.entry_points]
console_scripts =
    django-commit-tester = django_commit_tester:main

[bdist_wheel]
universal = True